Fixed Label For Issue
Label For attribute should refer to id not Name

--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
             or &ldquo;It is true that...&rdquo; Don't worry if it's not a
             complete sentence.<br>
           </p>
-          <label for="qualification">
+          <label for="qualificationEntry">
             Write your qualification:
             <textarea id="qualificationEntry" name="qualification" placeholder = "e.g. Despite its work relief elements and large government programs,"></textarea>
           </label>          
@@ -120,7 +120,7 @@
             What is the over all good to be gained by agreeing with your position? <br>
             This is a general statement; your specific reasons will follow in the body of your essay.
           </p>
-          <label for="reason">
+          <label for="reasonEntry">
             Write your reason:
             <textarea id="reasonEntry" name="reason" placeholder = "e.g. because its main programs attempted to create a stable environment for private enterprise."></textarea>
           </label>
@@ -146,7 +146,7 @@
           </p>
           <h3>Your Prompt: </h3><p id="promptDisplay"></p>
           <h3>Your Title: </h3><p id="titleDisplay"></p>
-          <label for="thesis">
+          <label for="thesisEntry">
             Edit your draft thesis: 
             <textarea id="thesisEntry" name="thesis" placeholder="e.g. Despite its work relief elements and large government programs, the New Deal is best understood as a defense of American capitalism because its main programs attempted to create a stable environment for private enterprise."></textarea>
           </label>
